foda-se essa merda de JAAS; foda-se essa merda de template filho-da-puta; fodam-se esses forms do capeta.

--- a/Loja-WEB/web/index.xhtml
+++ b/Loja-WEB/web/index.xhtml
@@ -4,11 +4,11 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
         <script type="text/javascript">
-            document.location = 'paginas/index.xhtml';
+            document.location = 'v2/';
         </script>
     </h:head>
     <h:body>
-        err... espera ae manolo :P
+        <h1>Carregando...</h1>
     </h:body>
 </html>
 
