--- a/Loja-WEB/web/v2/cadastroCategoria.xhtml
+++ b/Loja-WEB/web/v2/cadastroCategoria.xhtml
@@ -1,27 +1,23 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="./comun.xhtml"
                 xmlns:p="http://primefaces.prime.com.tr/ui"
+                template="./comum.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html">
-    <ui:define name="titulo">Cadastro de Categorias</ui:define>
-    <ui:define name="subtitulo"></ui:define>
+
     <ui:define name="content">
         <h:form id="cadastroCategoriaCompleto">
             <h:panelGrid columns="1">
-
-                <h:outputText value="Descrição: " />
-                <p:inputText value="#{managedCategoria.categoria.descricao}" />
-
+                <h:outputText value="Descricaoo: "></h:outputText>
+                <p:inputText value="#{managedCategoria.categoria.descricao}"></p:inputText>
             </h:panelGrid>
-            
+
             <p:commandButton title="Salvar categoria." action="#{managedCategoria.salvar}" 
-                             update=":cadastroCategoriaCompleto" value="Salvar" image="ui-icon-disk" />
+                             update="@form" value="Salvar" image="ui-icon-disk"></p:commandButton>
             <p:commandButton title="Excluir categoria." action="#{managedCategoria.excluir}" 
-                             update=":cadastroCategoriaCompleto" value="Excluir" image="ui-icon-trash" />
+                             update="@form" value="Excluir" image="ui-icon-trash"></p:commandButton>
             <p:commandButton title="Cadastrar uma nova categoria." action="#{managedCategoria.novo}" 
-                             update=":cadastroCategoriaCompleto" value="Novo" image="ui-icon-new" />
-            
+                             update="@form  " value="Novo" image="ui-icon-new"></p:commandButton>
         </h:form>
     </ui:define>
 
