--- a/Loja-WEB/web/v2/index.xhtml
+++ b/Loja-WEB/web/v2/index.xhtml
@@ -1,22 +1,22 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="./comun.xhtml"
                 xmlns:p="http://primefaces.prime.com.tr/ui"
+                template="./comum.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html">
-
 
     <ui:define name="content">
         <p:carousel value="#{managedProduto.listaProdutos}" var="prod"
-                    autoPlayInterval="2500"  style="width: 99%"
-                    rows="4" effect="easeInStrong" circular="true" >
+                    autoPlayInterval="2500" 
+                    rows="2" effect="easeInStrong" circular="true" >
             <h:link outcome="detalhesProduto.xhtml?produto=#{prod.id}">
-                <h:panelGrid columns="1" style="height: 300px; width: 100%" cellpadding="4  ">
+                <h:panelGrid columns="1" style="width: 100%" cellpadding="4  ">
                     <h:outputText value="Nome:  #{prod.nome}" />
                     <p:graphicImage value="#{prod.imagem}" width="200px" height="200px" />         
                 </h:panelGrid>
             </h:link>
         </p:carousel>
+
     </ui:define>
 
 </ui:composition>
