--- a/Loja-WEB/web/v2/erroLogin.xhtml
+++ b/Loja-WEB/web/v2/erroLogin.xhtml
@@ -3,12 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
-        <script type="text/javascript">
-            document.location = 'v2/';
-        </script>
+        <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h1>Carregando...</h1>
+        Usuario e/ou senha invalidos!
     </h:body>
 </html>
 
