--- a/Loja-WEB/web/v2/comum.xhtml
+++ b/Loja-WEB/web/v2/comum.xhtml
@@ -45,7 +45,7 @@
             <ui:include src="login.xhtml" />
         </p:dialog>
 
-        <p:layout fullPage="true" >
+        <p:layout fullPage="true" id="layoutLoja" >
             <p:layoutUnit position="top" height="70">
                 <hgroup>
                     <h1 id="titulo">SR-Malhas</h1>
@@ -53,7 +53,8 @@
                         <h:outputLink rendered="#{empty managedLogin.logado}" value="Login" onclick="loginBox.show(); return false;">Login</h:outputLink>
                         <h:panelGroup rendered="#{not empty managedLogin.logado}" >
                             <h:outputText value="Bem vindo #{managedLogin.logado.nome}" />
-                            <h:commandLink id="asd" value="Sair" action="#{managedLogin.logout}" />
+                            <p:spacer width="7px" /><h:outputText value="-" /><p:spacer width="7px" />
+                            <h:commandLink value="Sair" action="#{managedLogin.logout}" />
                         </h:panelGroup>
                     </h:form>
                 </hgroup>
