--- a/Loja-WEB/web/v2/comum.xhtml
+++ b/Loja-WEB/web/v2/comum.xhtml
@@ -60,7 +60,7 @@
                 </hgroup>
             </p:layoutUnit>
 
-            <p:layoutUnit position="left" width="220" scrollable="true" resizable="true">
+            <p:layoutUnit position="left" width="220" scrollable="true" resizable="true" styleClass="esquerda">
                 <!--carrinho-->
 
                 <ui:include src="carrinho.xhtml" />
@@ -68,7 +68,7 @@
 
             </p:layoutUnit>
 
-            <p:layoutUnit position="center" scrollable="true">
+            <p:layoutUnit position="center" scrollable="true" styleClass="centro">
                 <ui:insert name="content">Content</ui:insert>
             </p:layoutUnit>
 
