--- a/Loja-WEB/web/v2/detalhesProduto.xhtml
+++ b/Loja-WEB/web/v2/detalhesProduto.xhtml
@@ -8,6 +8,7 @@
 
     <ui:define name="content">
         <h:form>
+            <p:growl />
             <f:metadata>
                 <f:viewParam name="produto" value="#{managedProduto.produto}">
                     <f:converter converterId="produtoConverter" />
