--- a/Loja-WEB/web/v2/listaCategoria.xhtml
+++ b/Loja-WEB/web/v2/listaCategoria.xhtml
@@ -8,6 +8,7 @@
 
     <ui:define name="content">
         <h:form id="listaCategorias">
+            <p:growl />
             <h:panelGroup style="width: 100%">
                 <h:panelGrid columns="6" style="">
                     <h:outputText value="Pesquisar" />
