--- a/Loja-WEB/web/v2/listaProduto.xhtml
+++ b/Loja-WEB/web/v2/listaProduto.xhtml
@@ -9,6 +9,7 @@
 
     <ui:define name="content">
         <h:form>
+            <p:growl />
             <h:panelGroup style="width: 100%">
                 <h:panelGrid columns="4" style="">
                     <h:outputText value="Pesquisar" />
